adminer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminer
  namespace: default
spec:
  selector:
    matchLabels:
       app: adminer
  template:
    metadata:
      labels:
        app: adminer
    spec:
      containers:
      - name: adminer
        image: adminer # This is the deployment that will create the Adminer pod to manage the database
        # resources:
        #   limits:
        #     memory: "128Mi"
        #     cpu: "100m"
        ports:
        - containerPort: 8080
