traefik.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik   
    spec:
      serviceAccountName: traefik-account
      containers:
        - name: traefik
          image: traefik:v3.2 # This is the Traefik image that will be used to create the Traefik pod
          resources:
            limits:
              memory: "521Mi"
              cpu: "500m"
            requests:
              memory: "64Mi"
              cpu: "50m"
          args:
            - --api.insecure=true
            - --providers.file.filename=/etc/traefik/config.yaml
            - --entrypoints.web.address=:80
            - --providers.kubernetesingress
          ports:
            - name: web
              containerPort: 80
            - name: dashboard
              containerPort: 8080
          volumeMounts:
            - name: config
              mountPath: /etc/traefik
      volumes:
        - name: config
          configMap:
            name: traefik-config
