deployment.yaml
# ---
# apiVersion: v1
# kind: Namespace
# metadata:
#   name: cbt-namespace
# ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: php
  template:
    metadata:
      labels:
        app: php
    spec:
      containers:
        - name: php
          image: teknikhub/frankenphp # This is the deployment that will create the PHP pod
          resources:
            limits:
              memory: "521Mi"
              cpu: "100m"
            requests:
              memory: "64Mi"
              cpu: "50m"
          ports:
            - name: web
              containerPort: 80
          volumeMounts:
            - name: php-code
              mountPath: /app/public
      volumes:
        - name: php-code
          hostPath:
            path: /home/ubuntu/kubernetes/Traefik-lb-frankenphp/cbt-smkdone # Change this path to the path of the directory where you have your PHP code
---
apiVersion: v1
kind: Service
metadata:
  name: php
  namespace: default
  annotations: # This is the annotation that will enable sticky sessions for the PHP service
    service.beta.kubernetes.io/do-loadbalancer-sticky-sessions-type: "cookies"
    service.beta.kubernetes.io/do-loadbalancer-sticky-sessions-cookie-name: "example"
    service.beta.kubernetes.io/do-loadbalancer-sticky-sessions-cookie-ttl: "60"
    traefik.ingress.kubernetes.io/service.sticky.cookie.name: cookie
spec:
  ports:
    - name: web
      port: 80
      targetPort: web
  selector:
    app: php
