mariadb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
        - name: mariadb
          image: mariadb:latest
          env: # This is the environment variables that will be used to configure the MariaDB pod
            - name: MARIADB_ROOT_PASSWORD
              value: "1pai9mpl"
            - name: MARIADB_DATABASE
              value: "tryout"
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mariadb-data
              mountPath: /var/lib/mysql 
      volumes:
        - name: mariadb-data
          hostPath:
            path: /home/ubuntu/kubernetes/Traefik-lb-frankenphp/database # Change this path to the path of the directory where you want to store the database data
---
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: default
spec:
  ports:
    - port: 3306
      targetPort: 3306
      protocol: TCP
  selector:
    app: mariadb
